--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ itsdangerous==2.1.2
 Jinja2==3.1.1
 MarkupSafe==2.1.1
 pycparser==2.21
+psycopg2==2.9.5
 six==1.16.0
 SQLAlchemy==1.4.35
 sqlparse==0.4.2
